--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ email-validator==1.2.1
 Flask==2.2.2
 flask-mongoengine==1.0.0
 Flask-WTF==1.0.1
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
